Trabalhando com links e formulários

--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,12 @@ body {
 .clear {
     clear: both;
 }
+
+ul {
+    list-style-type: none;
+}
+
+ul li {
+    display: inline;
+    margin-right: 10px;
+}
