--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,36 @@ ul li {
     display: inline;
     margin-right: 10px;
 }
+
+.area {
+    position: relative;
+    left: 3.5%;
+    width: 650px;
+    height: 100%;
+}
+
+.input-form {
+    margin-bottom: 20px;
+}
+
+fieldset {
+    border: solid;
+    border-color: black;
+}
+
+legend {
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-style: italic;
+}
+
+.input-text {
+    width: 500px;
+    height: 20px;
+}
+
+.input-msg {
+    width: 500px;
+}
